k8s/namespaces/development/sonarqube/postgres/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-postgres-17
  namespace: development
  labels:
    app.kubernetes.io/name: sonarqube-postgres-17
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarqube-postgres-17
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarqube-postgres-17
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - name: postgres
        # renovate: datasource=docker depName=docker.io/postgres allowedVersions=/^17\./
        image: docker.io/postgres:17.6@sha256:cecd364cc7ec03ab6148ab650efc5200548a89fd2e4f47a8ba6e6cf08c18805d
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
          subPath: postgres
        resources:
          limits:
            memory: 1Gi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: 200m
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: sonarqube-postgres-pvc
