k8s/namespaces/development/sonarqube/postgres/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarqube-postgres-17
  namespace: development
  labels:
    app.kubernetes.io/name: sonarqube-postgres-17
  annotations:
    kustomize.toolkit.fluxcd.io/force: "enabled"
spec:
  serviceName: sonarqube-postgres-17
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarqube-postgres-17
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarqube-postgres-17
        app.kubernetes.io/managed-by: flux
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
      automountServiceAccountToken: false
      containers:
      - name: postgres
        # renovate: datasource=docker depName=docker.io/postgres
        image: docker.io/postgres:17.6@sha256:00bc86618629af00d2937fdc5a5d63db3ff8450acf52f0636ec813c7f4902929
        ports:
        - containerPort: 5432
          name: postgres
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "sonarqube"]
          periodSeconds: 10
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "sonarqube"]
          initialDelaySeconds: 30
          periodSeconds: 30
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            memory: 256Mi
            cpu: 200m
            ephemeral-storage: "20Gi"
          limits:
            memory: 1Gi
            cpu: "1"
            ephemeral-storage: "50Gi"
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
      labels:
        app.kubernetes.io/name: sonarqube-postgres-17
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-path-rwo"
      resources:
        requests:
          storage: 10Gi
