k8s/namespaces/development/sonarqube/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-postgres-17
  namespace: development
  labels:
    app.kubernetes.io/name: sonarqube-postgres-17
spec:
  ports:
  - port: 5432
    targetPort: postgres
  selector:
    app.kubernetes.io/name: sonarqube-postgres-17
