k8s/namespaces/development/sonarqube/postgres/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sonarqube-postgres-17
  namespace: development
  labels:
    app.kubernetes.io/name: sonarqube-postgres-17
    app.kubernetes.io/managed-by: flux
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sonarqube-postgres-17
      app.kubernetes.io/managed-by: flux
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: development
      ports:
        - port: 5432
          protocol: TCP
  egress:
    - {}
